<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editTextTotalIncome"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/Enter_Amount"
        android:inputType="number|numberDecimal"
        android:text="0" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewTotalIncome"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextTotalIncome"
        android:layout_alignParentRight="true"
        android:text="@string/Income"
        android:textAppearance="?android:attr/textAppearanceLargePopupMenu" />

    <TextView
        android:id="@+id/textViewTotalExpenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextTotalExpenses"
        android:layout_alignLeft="@+id/textViewTotalIncome"
        android:text="@string/Expenses"
        android:textAppearance="?android:attr/textAppearanceLargePopupMenu" />

    <TextView
        android:id="@+id/textViewTotalLoans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextTotalLoans"
        android:layout_alignLeft="@+id/textViewTotalExpenses"
        android:text="@string/Loans"
        android:textAppearance="?android:attr/textAppearanceLargePopupMenu" />

    <TextView
        android:id="@+id/textViewNetWorth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewTotalLoans"
        android:layout_centerVertical="true"
        android:text="@string/Net_Worth"
        android:textAppearance="?android:attr/textAppearanceLargePopupMenu" />

    <Button
        android:id="@+id/bResetNetWorth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bCalculateNetWorth"
        android:layout_alignBottom="@+id/bCalculateNetWorth"
        android:layout_alignLeft="@+id/textViewNetWorth"
        android:layout_alignParentRight="true"
        android:text="@string/Reset_Values" />

    <Button
        android:id="@+id/bCalculateNetWorth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewMessageNetWorth"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/editTextTotalLoans"
        android:layout_marginBottom="5dp"
        android:text="@string/Calculate" />

    <TextView
        android:id="@+id/textViewMessageNetWorth"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextTotalExpenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/editTextTotalIncome"
        android:layout_below="@+id/editTextTotalIncome"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/Enter_Number"
        android:inputType="number"
        android:text="0" />

    <EditText
        android:id="@+id/editTextTotalLoans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editTextTotalExpenses"
        android:layout_below="@+id/editTextTotalExpenses"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/Enter_Number"
        android:inputType="number|numberDecimal"
        android:text="0" />

    <EditText
        android:id="@+id/editTextNetWorth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/editTextTotalIncome"
        android:layout_centerVertical="true"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/Enter_Number"
        android:inputType="numberDecimal"
        android:text="@string/DEFAULT_NUM" />

</RelativeLayout>